cmake_minimum_required(VERSION 3.1)
project(OpenCV4forPython)
find_package( OpenCV REQUIRED )
add_executable(2_1.out 2_1.cpp)
add_executable(2_2.out 2_2.cpp)
add_executable(2_3.out 2_3.cpp)
add_executable(8_4.out 8_4.cpp)
add_executable(mask_rcnn.out mask_rcnn.cpp)
target_link_libraries(2_1.out ${OpenCV_LIBS})
target_link_libraries(2_2.out ${OpenCV_LIBS})
target_link_libraries(2_3.out ${OpenCV_LIBS})
target_link_libraries(8_4.out ${OpenCV_LIBS})
target_link_libraries(mask_rcnn.out ${OpenCV_LIBS})
